# coltoo

./: BUGS  CMakeLists.txt  INSTALL  Makefile.am  README.md  autogen.sh  build-mingw32.c  coltoo.dev  configure.in  mingw-debug.bat  mingw-release.bat
data/text/: TextColors.txt  colony.txt  databuildings.xml  datalabels.xml  datarumors.xml  dataskills.xml  datasys.xml  dataunits.xml  datavillage.xml  labels.txt  map00.txt  map01.txt  map02.txt  map03.txt  map04.txt  map05.txt  map06.txt  map07.txt  map08.txt  map09.txt  map10.txt  names.xml  options.xml  pricelist.txt  tiles.xml
src/: CDS1.cpp  CDSmouse.cpp  CTileResource.cpp  CTileResource.h  CTileType.cpp  CTileType.h  CTileTypes.cpp  CTileTypes.h  ColorData.cpp  ColorData.h  Drawcds1.cpp  Drawcds2.cpp  HCSmouse.cpp  Makefile.win  OptionList.cpp  OptionList.h  actor.cpp  actor.h  ai.cpp  ai.h  bckgrnd.cpp  blit.cpp  colony.cpp  colony.h  coltoo.dev  deuro1.cpp  deuro2.cpp  deuro3.cpp  deuro4.cpp  display.cpp  eventHandler.cpp  eventHandler.h  falseterr.cpp  font.cpp  font2.cpp  gameEngine.cpp  gameEngine.h  globalData.cpp  globalData.h  graphicsEngine.cpp  (+28 more)
