# Process this file with autoconf to produce a configure script.
# $Id: configure.in,v 1.2 2004/06/26 21:13:04 sprudl Exp $

AC_INIT(main.cpp)
AM_INIT_AUTOMAKE(coltoo,0.0)

AC_PROG_CXX
CXXFLAGS=""
CFLAGS=""

AC_MSG_CHECKING(for debugging symbols)
AC_ARG_ENABLE(debug, [  --enable-debug          enable debugging symbols], debug=$enableval,debug=no)
if test "$debug" != no
then
    CXXFLAGS="-g $CXXFLAGS"
		AC_DEFINE(DEBUG)
    AC_MSG_RESULT(enabled)
else
    AC_MSG_RESULT(no)
fi

AC_MSG_CHECKING(for gprof)
AC_ARG_ENABLE(gprof, [  --enable-gprof          enable memory profiling with gprof], gprof=$enableval,gprof=no)
if test "$gprof" != no
then
    CXXFLAGS="-pg $CXXFLAGS"
    AC_MSG_RESULT(enabled)
else
    AC_MSG_RESULT(no)
fi

AC_MSG_CHECKING(for optimisation information)
AC_ARG_WITH(oplevel, [  --with-oplevel=LEVEL    set the compiler optimisation level], oplevel=$withval,oplevel=none)
case $withval in
    O0) CXXFLAGS="-O0 $CXXFLAGS"
        AC_MSG_RESULT(O0)
    ;;
    O1) CXXFLAGS="-O1 $CXXFLAGS"
        AC_MSG_RESULT(O1)
    ;;
    O2) CXXFLAGS="-O2 $CXXFLAGS"
        AC_MSG_RESULT(O2)
    ;;
    O3) CXXFLAGS="-O3 $CXXFLAGS"
        AC_MSG_RESULT(O3)
    ;;
    *)  CXXFLAGS="-O2 $CXXFLAGS"
        AC_MSG_RESULT(defaulting to O2)
    ;;
esac
																		
AC_CHECK_LIB(stdc++, main)

SDL_VERSION=1.2.6 
AM_PATH_SDL($SDL_VERSION, :, AC_MSG_ERROR([*** SDL version $SDL_VERSION not found.]))
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS" 
LIBS="$LIBS $SDL_LIBS"

AC_CHECK_LIB(SDL_ttf, TTF_Quit, have_sdl_ttf=yes, AC_MSG_ERROR([*** Unable to find SDL_ttf library.])) 
LIBS="$LIBS -lSDL_ttf"

AC_CHECK_LIB(SDL_image, IMG_LoadPNG_RW, , AC_MSG_ERROR([*** Unable to find SDL_image libary with PNG support.]))
LIBS="$LIBS -lSDL_image"

AC_OUTPUT(Makefile)
